--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My custom New Tap page for google chrome nav",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "Fabian Sanchez",
@@ -13,7 +15,9 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
