--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --mode development",
-    "build": "export NODE_ENV=production && webpack"
+    "build1": "export NODE_ENV=production && webpack --mode production --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "author": "Fabian Sanchez",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.5",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.1",
     "dotenv-webpack": "^7.0.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
-    "postcss": "^8.3.2",
+    "mini-css-extract-plugin": "^1.6.0",
+    "postcss": "^8.3.4",
     "postcss-loader": "^6.1.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
